--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Felipe Montaña",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
