--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "start": "nodemon server/index.js"
   },
   "keywords": [],
-  "author": "Felipe Montaña",
+  "author": "Felipe",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-validator": "^6.14.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.25.6"
+    "express-validator": "^6.14.2"
   }
 }
