--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Felipe",
@@ -12,6 +12,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-validator": "^6.14.2"
+    "express-validator": "^6.14.2",
+    "mysql2": "^2.3.3",
+    "node": "^19.1.0",
+    "react": "^18.2.0",
+    "sequelize": "^6.25.7",
+    "sequelize-cli": "^6.5.2"
   }
 }
